# coding-dojo

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pytest.ini  404.html  CHANGELOG.md  LICENSE  README.md  dotenv  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml
.git-hooks/: commit-msg  pre-commit  prepare-commit-msg  prepare-commit-msg.py.sample
.github/ISSUE_TEMPLATE/: custom.md  new-dojo-template.md
.github/workflows/: docs_ci_cd.yml  gha-releases.yml  gwa-flow.yml  package-release.yml  python-package.yml  releases-gwa-ci-cd.yml  tests-gwa-ci-cd.yml
FAQ/: index.html
about/CHANGELOG/: index.html
about/CONTRIBUTORS/: index.html
about/LICENSE/: index.html
coding_challenge/: index.html
coding_dojo_jedi/20190129/: README.md
coding_dojo_jedi/20220714/: README.md  test_20220714.py  tests.py
coding_dojo_jedi/20220717/: README.md  dojo.py  test_20220717.py  tests.py
coding_dojo_jedi/20220718/: README.md  test_20220718.py
coding_dojo_jedi/20220720/: README.md  dojo20220720.py  test_20220720.py  tests.py
coding_dojo_jedi/20220721/: README.md  tests.py
coding_dojo_jedi/20220722/: README.md  env.example  main.py  star_wars.py  test_20220722.py
coding_dojo_jedi/20220723/: dojo20220723.py  test_20220723.py
coding_dojo_jedi/20220723a/: README.md
coding_dojo_jedi/20220725/: README.md  main.py  star_wars.py  test_20220725.py  tests.py
coding_dojo_jedi/20220725a/: README.md
coding_dojo_jedi/20220727/: main.py  star_wars.py  test_20220727.py
coding_dojo_jedi/20220729/: README.md  dojo.py  dojo20220729.py  test_20220729.py  tests.py
coding_dojo_jedi/20220729a/: README.md
coding_dojo_jedi/20220730a/: README.md
coding_dojo_jedi/20220731/: dojo.py  test_20220731.py  tests.py
coding_dojo_jedi/20220731a/: README.md
coding_dojo_jedi/20220801/: dojo.py  test_20220801.py
coding_dojo_jedi/20220803/: README.md  test_20220803.py  tests.py
coding_dojo_jedi/20220805/: README.md  dojo.py  tests.py
coding_dojo_jedi/20220808/: dojo.py  test_20220808.py  tests.py
coding_dojo_jedi/20220809/: README.md
coding_dojo_jedi/20220810/: dojo.py  tests.py
coding_dojo_jedi/20220811/: dojo.py  tests.py
coding_dojo_jedi/20220812/: README.md  dojo.py  test_20220812.py
coding_dojo_jedi/20220815/: README.md  problema3.md  test_20220815.py
coding_dojo_jedi/20220815/problema1/: README.md  dojo.py  tests.py
coding_dojo_jedi/20220815/problema2/: dojo.py  tests.py
coding_dojo_jedi/20220815/problema3/: dojo20220815.py  tests.py
coding_dojo_jedi/20220817/: README.md
coding_dojo_jedi/20220817/problema1/: dojo20220817.py  tests.py
coding_dojo_jedi/20220817/problema2/: README.md  dojo.py  tests.py
coding_dojo_jedi/20220819/: dojo.py  test_20220819.py
coding_dojo_jedi/20220819/problema1/: dojo.py  tests.py
coding_dojo_jedi/20220822/: README.md  dojo20220822.py
coding_dojo_jedi/20220822/problema1/: README.md  dojo.py  test_20220822.py
coding_dojo_jedi/20220822/problema2/: README.md  dojo20220822.py  tests.py
coding_dojo_jedi/20220824/: README.md  problema1.md
coding_dojo_jedi/20220824/problema1/: dojo20220824.py  tests.py
coding_dojo_jedi/20220824/problema2/: README.md  dojo.py  tests.py
coding_dojo_jedi/20220826/: README.md  test_20220826.py
coding_dojo_jedi/20220826/problema1/: README.md  dojo.py  tests.py
coding_dojo_jedi/20220826/problema2/: README.md  dojo20220826.py  tests.py
coding_dojo_jedi/20220826/problema3/: dojo20220826.py  tests.py
coding_dojo_jedi/20220831/: dojo.py  test_20220831.py  tests.py
coding_dojo_jedi/20220831/problema1/: README.md  dojo.py  tests.py
coding_dojo_jedi/20220902/: README.md  dojo20220902.py  test_20220902.py  tests.py
coding_dojo_jedi/20220905/: dojo.py  test_20220905.py  tests.py
coding_dojo_jedi/20220907/: README.md  dojo20220907.py  tests.py
coding_dojo_jedi/20220909/: README.md  dojo.py  test_20220909.py  tests.py
coding_dojo_jedi/20220910/: README.md  dojo.py  test_20220910.py  tests.py
coding_dojo_jedi/20220912/: README.md  dojo.py  dojo20220912.py  test_20220912.py  tests.py
coding_dojo_jedi/20220914/: README.md  tests.py
coding_dojo_jedi/20220919/: dojo.py  test_20220919.py
coding_dojo_jedi/20220921/: README.md  dojo.py  tests.py
coding_dojo_jedi/20220926/: README.md  dojo.py  test_20220926.py  tests.py
coding_dojo_jedi/20220928/: dojo.py  tests.py
docs/: FAQ.md  README.md  README_model.md  index.md
docs/about/: CHANGELOG.md  CONTRIBUTORS.md  LICENSE.md
docs/coding_challenge/: README.md
docs/coding_ia/: README.md
docs/stylesheets/: extra.css
docs/user_guide/: COVENTIONAL_COMMITS.md  INSTALLATION.md  code_of_conduct.md  development.md  dojo-script.md  dojos-resolvidos.md  keep-a-changelog.md  semver.md  tests_resources.md  usage.md  uv.md  writing-your-docs.md  zenpy.md
extra-src/: incolumepy_utils-2.10.0-py3-none-any.whl
incolume/py/coding_dojo_jedi/dojo20241107/: README.md  __init__.py  pyproject.toml  test_20241107.py
incolume/py/coding_dojo_jedi/dojo20260620/: README.md  __init__.py  dojo20260620.py  main.ipynb  pyproject.toml  test_20260620.py
requirements/: prod.txt
resultado/: 17-06-2026 20.34.json  17-06-2026 20.34.srt  17-06-2026 20.34.tsv  17-06-2026 20.34.txt  17-06-2026 20.34.vtt
search/: search_index.json
src/20190129/: dojo.py
tests/: __init__.py  conftest.py  incolume_py_coding_dojo_cli_test.py  incolume_py_coding_dojo_readme_test.py  incolume_py_coding_dojo_utils_test.py  package_test.py  semver_test.py  stuffs_test.py  test_incolume_py_coding_dojo_readme.py  test_incolume_py_coding_dojo_utils.py  test_package.py  test_semver.py  test_stuffs.py
user_guide/COVENTIONAL_COMMITS/: index.html
user_guide/INSTALLATION/: index.html
user_guide/code_of_conduct/: index.html
user_guide/development/: index.html
user_guide/dojos-resolvidos/: index.html
user_guide/keep-a-changelog/: index.html
user_guide/semver/: index.html
user_guide/tests_resources/: index.html
user_guide/usage/: index.html
user_guide/writing-your-docs/: index.html
user_guide/zenpy/: index.html
worktrees/: README.md
(+623 files in other folders)
