[project]
name = "coding-dojo-jedi"
version = "1.72.0a3"
description = "códigos da guilda jedi incolume"
authors = [
    { name = "Ricardo Brito", email = "brito@incolume.com.br" }
]
maintainers = [
  { name = "Community Manager", email = "jedi@incolume.com.br" }
]
requires-python = ">=3.10,<4"
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Natural Language :: Portuguese (Brazilian)",
  "Intended Audience :: Education",
  "Topic :: Education",
  "License :: Free For Educational Use",
]
dependencies = [
    "click>=8.2.1",
    "deprecated>=1.2.18",
    "icecream>=2.1.5",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]

[project.scripts]
sumary = 'incolume.py.coding_dojo_jedi.cli:sumary'
dojo = 'incolume.py.coding_dojo_jedi.cli:dojo'

[tool.uv.build-backend]
module-name = "incolume.py.coding_dojo_jedi"
module-root = ""

[tool.uv.workspace]
members = [
    "incolume/py/coding_dojo_jedi/dojo20260620",
    "incolume/py/coding_dojo_jedi/dojo20260622",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

[project.urls]
"Documentation" = "https://incolume-jedi.github.io/coding-dojo/"
"Source" = "https://github.com/incolume-jedi/coding-dojo/"
"Git" = "https://github.com/incolume-jedi/coding-dojo.git"
"Tracker" = "https://github.com/incolume-jedi/coding-dojo/-/issues"
"Bug Tracker" = "https://github.com/incolume-jedi/coding-dojo/-/issues"

[tool.poetry]
version = "1.72.0a3"
name = "coding-dojo-jedi"
description = "códigos da guilda jedi incolume"
authors = ["Ricardo Brito <brito@incolume.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = ">=0.20.0"
Unidecode = "^1.3.4"
requests = "^2.28.1"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = [{version="^0.12.2", python='<=3.7,~3.7'}]
levenshtein = {version=">=0.22.0", python='>=3.8'}
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
blue = "^0.9.1"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
ruff = [
  {version=">=0.0.290", python="~3.7"},
  {version=">=0.4", python=">=3.8"},
  ]
types-requests = "^2.31.0.5"
types-toml = "^0.10.8.7"
# incolume-py-changelog = "^0.7.0"
# incolume-py-changelog = {git = "https://github.com/development-incolume/incolume.py.changelog", tag = "0.8.0"}
# incolume-py-changelog = {git = "https://github.com/development-incolume/incolume.py.changelog", rev = "0.10.0"}
incolume-py-changelog = {git = "https://github.com/development-incolume/incolume.py.changelog", branch = "tags"}
pre-commit = [
  {version="~3.5", python='~3.8'},
  {version="^3.7", python='~3.9'},
  {version=">=3.8", python='>=3.10'},
  ]
pytz = "^2024.1"
poetry = "^1.8.3"
pandas = "^2.2.2"
lxml = "^5.2.2"
html5lib = "^1.1"
openpyxl = "^3.1.2"
httpx = "^0.27.0"
deepl = "^1.18.0"
icecream = "^2.1.3"
bs4 = "^0.0.2"
selenium = "^4.21.0"
faker = "^25.8.0"
ipykernel = "^6.29.5"
uv = {version="^0.4.10", optional=true, python='>=3.8'}
pillow = "^10.3.0"
respx = "^0.21.1"
time-machine = "^2.16.0"
filetype = "^1.2.0"
puremagic = "^1.28"
tqdm = "^4.67.1"
jsonpickle = "^4.0.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.10.0"
deprecated = "^1.2.15"


[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5.3"
mkdocstrings = ">=0.23.0"
mkdocstrings-python = ">=1.7.0"
mkdocs-material = ">=9.4.2"

[tool.poetry.scripts]
sumary = 'incolume.py.coding_dojo_jedi.cli:sumary'
dojo = 'incolume.py.coding_dojo_jedi.cli:dojo'

[tool.poetry.extras]
# uv = ["uv"]
# all = ["uv"]

[tool.isort]
profile = "black"
known_first_party = "poetry"
skip = [".gitignore", ".dockerignore"]
skip_glob = ["example/*"]
extend_skip = [".md", ".json"]
extend_skip_glob = ["my_*_module.py"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
 /(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
  | docs
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
 )/
 '''

[flake8]
#max-line-length = 79

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 79

[tool.pylint.basic]
# Allow shorter and longer variable names than the default.
argument-rgx = "[a-z_][a-z0-9_]*$"
attr-rgx = "[a-z_][a-z0-9_]*$"
variable-rgx = "[a-z_][a-z0-9_]*$"

# Ensure that orjson is analysed as a C extension by pylint.
extension-pkg-whitelist = "orjson"


[tool.pylint.messages_control]
disable = [
  # Disable too many and too few checks.
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-boolean-expressions",
  "too-many-branches",
  "too-many-function-args",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "too-few-public-methods",

  # Similar lines in files (often the case in tests).
  "duplicate-code",

  # Many functions (e.g. callbacks) will naturally have unused arguments.
  "unused-argument",

  # # Disable checking that method could be a function in classes (often used for organisation).
  # "no-self-use",

  # Disable failure for TODO items in the codebase (code will always have TODOs).
  "fixme",

  # Disable docstrings checks as we don't require excessive documentation.
  "missing-docstring",

  "no-member",
  "unspecified-encoding",

  #
  "import-error",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
#ignore_missing_imports = true
#ignore_errors = false
#warn_return_any = true
#warn_unused_configs = true

[[tool.mypy.overrides]]
module = "pyautogui.*"
disable_error_code = "attr-defined"
disallow_untyped_defs = true



[pycodestyle]
max_line_length = 79
ignore = ['E203']

[dependency-groups]
dev = [
    "deepl>=1.22.0",
    "faker>=37.8.0",
    "filetype>=1.2.0",
    "fuzzywuzzy>=0.18.0",
    "html5lib>=1.1",
    "icecream>=2.1.8",
    "incolume-py-changelog>=0.17.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.5",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "opencv-python>=4.10.0.84",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "poetry>=2.4.1",
    "pre-commit>=4.3.0",
    "puremagic>=1.30",
    "pytest-cov>=6.2.1",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytz>=2025.2",
    "respx>=0.22.0",
    "ruff>=0.12.8",
    "time-machine>=2.19.0",
    "tomlkit>=0.15.0",
]

[tool.taskipy.variables]
sumary_file = "incolume/py/coding_dojo_jedi/README.md"
path = "incolume/ tests/"
CHANGELOGFILE = "docs/about/CHANGELOG.md"
URLCOMPARE = "https://github.com/incolume-jedi/coding-dojo/compare"

[tool.taskipy.tasks]
#bandit={help='', cmd='poetry run bandit -c pyproject.toml -r {path}', use_vars=true}
#pre_check-all = {cmd='echo Starting Check all ..', help=''}
#check-all = {cmd='poetry run task clean-all; poetry run task lint; poetry run task sec',  help = "Checking all" }
#post_check-all = {cmd='echo Checking finished!', help=''}
clean = {cmd = "echo -n 'Starting cleanning environment..'; find ./ \\( -wholename '*report_coverage' -o -name '*.pyc' -o -name '*~' -o -name '*.log' -o -name '*.log.*' -o -name '.cache' -o -name '.coverage' \\) -delete ; echo ' ok' ",  help = "Shallow clean into environment (.pyc, .cache, .egg, .log, et all)" }
pre_clean-all = {cmd='poetry run task clean', help=''}
clean-all = {cmd = "echo -n 'Starting Deep cleanning ..'; find ./ \\( -name '*_cache' -o -name '*cache__' -o -name dist -o -name build -o -name .tox -o -name site -o -name coverage_report \\) -exec rm -rf {} 2> /dev/null \\; ; echo ' Deep cleaning finished!' ",  help = "Deep cleanning into environment (dist, build, htmlcov, .tox, *_cache, et all)" }
pre_docs-build={help='Pre docs-build', cmd="poetry run task gcl"}
docs-build = {help="Generate documentation", cmd="poetry run mkdocs gh-deploy --config-file mkdocs.yml --remote-branch webdoc"}
docs-serve = {help="Run server documentation", cmd="poetry run mkdocs serve"}
gsumary = {help="Generate a sumary with dojos", cmd="poetry run sumary -f {sumary_file} -r ", use_vars=true}
post_gsumary={cmd='git commit -m "docs: Atualização do sumário" {sumary_file}', use_vars=true}
lint-all = {help="Run all linters", cmd="poetry run task clean-all; poetry run task pre_lint && poetry run task lint_mypy && poetry run task lint_ruff"}
pre_lint="task lint_blue && task lint_isort && task lint_flake8 && task lint_pydocstyle && task lint_mypy && task lint_pylint"
lint={help='Checking all linters configurated', cmd=''}
lint_black={help='Checking with black', cmd='echo --black--; poetry run black --check --diff {path}', use_vars=true}
lint_blue={help='Checking with blue', cmd='echo --blue--; poetry run blue --check --diff {path}', use_vars=true}
lint_flake8={help='Checking with flake8', cmd='echo --flake8--; poetry run flake8 --config pyproject.toml {path}', use_vars=true}
lint_isort={help='Checking with isort', cmd='echo --isort--; poetry run isort --profile black --check --atomic --py all -m 3 {path}', use_vars=true}
lint_mypy={help='Checking with mypy', cmd='echo --mypy--; poetry run mypy --check {path}', use_vars=true}
lint_pydocstyle={help='Checking with pydocstyle', cmd='echo --pydocstyle--; poetry run pydocstyle {path}', use_vars=true}
lint_pylint={help='Checking with pylint', cmd='echo --pylint--; poetry run pylint {path}', use_vars=true}
lint_ruff={help='', cmd='echo --ruff--; poetry run ruff check --preview {path}', use_vars=true}
pre_patch={help='Run linters tools', cmd="poetry run task lint"}
patch={cmd='v=$(poetry version patch) && poetry run task tests && git ci -m "$v" pyproject.toml $(find incolume* -name version.txt)', help='Generate a patch Sematic Version'}
post_patch={help='Run securety tools', cmd="poetry run task bandit && poetry run task safety"}
premajor={cmd='v=$(poetry version premajor) && poetry run task tests && git ci -m "$v" pyproject.toml $(find incolume* -name version.txt)', help='poetry version premajor'}
preminor={cmd='v=$(poetry version preminor) && poetry run task tests && git ci -m "$v" pyproject.toml $(find incolume* -name version.txt)', help='poetry version preminor'}
#pre_prerelease='poetry run task gsumary'
prerelease={cmd='v=$(poetry version prerelease) && poetry run task tests && git ci -m "$v" pyproject.toml $(find incolume* -name version.txt)', help='poetry version prerelease'}
safety={help='Check safety of packages into project.', cmd='poetry run safety check'}
pre_sec={help='Securance validations', cmd='poetry run task bandit && poetry run task safety'}
sec={help="Checking environment's safety", cmd=''}
pre_changelog='poetry run pytest -m fast'
pre_tests={help='', cmd='task clean-all'}
tests={help='run all tests', cmd='poetry run pytest -m "not webtest"'}
pre_test-all={help='', cmd='task lint'}
test-all={help='Test all cases', cmd='task tests'}
changelog = {help='Update changelog file', cmd = "poetry run gcl {CHANGELOGFILE} -u {URLCOMPARE} && echo CHANGELOG file - {CHANGELOGFILE} - updated with success.;echo", use_vars = true }
gcl = {help='Update changelog file', cmd='poetry run task changelog'}
#xpto = { cmd = "echo {path} {CHANGELOGFILE} {URLCOMPARE}", use_vars = true }
setup = { help = 'Configure environment develop', cmd='git config core.hooksPath .git-hooks/'}
