[project]
name = "dojo20260620"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "openai-whisper",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }

[dependency-groups]
dev = [
    "icecream>=2.1.8",
]
